--- a/index.html
+++ b/index.html
@@ -1,17 +1,11 @@
 <!--html skeleton taken from w3schools-->
 
 <!DOCTYPE html>
-<html>
-
+<html lang="en-us">
 <head>
   <meta charset="utf-8">
-  <title></title>
-  <meta name="author" content="">
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <title>Cyrstal Collector!</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css"
 </head>
 
 <body>
@@ -19,7 +13,7 @@
   <p>Hello, world!</p>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script src="js/script.js"></script>
+  <script src="text/js/script.js"></script>
 </body>
 
 </html>
