are my href's even correct?

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 <head>
   <meta charset="utf-8">
   <title>Cyrstal Collector!</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css"
+  <!--are these link's even right?-->
+  <link rel="stylesheet" type="text/css" href="assets/css/crystals.css"/>
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
 </head>
 
 <body>
