i added some buttons that do don't anything

--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
 
 <body>
 
-  <p>Hello, world!</p>
+    <h1>Crystal 1</h1>
+    <button type="button" onclick="alert('You clicked crystal 1!')">Crystal un</button>
+
+    <h2>Crystal 2</h2>
+    <button type="button" onclick="alert('You clicked crystal 2')">Crystal deux</button>
+
+    <h3>Crystal 3</h3>
+    <button type="button" onclick="alert('You clicked crystal 3')">Crystal tres</button>
+
+    <h3>Crystal 4</h3>
+    <button type="button" onclick="alert('You clicked crystal 4')">Crystal quatre</button>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="text/js/script.js"></script>
