what am i doing?

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <h1>Crystal 1</h1>
     <button type="button" onclick="alert('You clicked crystal 1!')">Crystal un</button>
+    
 
     <h2>Crystal 2</h2>
     <button type="button" onclick="alert('You clicked crystal 2')">Crystal deux</button>
@@ -23,6 +24,10 @@
 
     <h3>Crystal 4</h3>
     <button type="button" onclick="alert('You clicked crystal 4')">Crystal quatre</button>
+   
+    <!--how come this one is stylized but all the others aren't???-->
+    <button>Default Button</button>
+    <button class="button">Styled Button</button>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="text/js/script.js"></script>
